[gd_scene load_steps=14 format=3 uid="uid://c70s343tbytjy"]

[ext_resource type="Script" uid="uid://20ua70uu063s" path="res://Debug.gd" id="1"]
[ext_resource type="FontFile" uid="uid://dnmu6qv86022n" path="res://Art/impact.ttf" id="2"]
[ext_resource type="Script" uid="uid://dtkwmef6rs85c" path="res://Overlay.gd" id="3"]

[sub_resource type="FontFile" id="11"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.564706, 0.564706, 0.564706, 1)

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="Theme" id="4"]
ProgressBar/fonts/font = SubResource("5")
ProgressBar/styles/bg = SubResource("2")
ProgressBar/styles/fg = SubResource("3")

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="13"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/39/0 = Vector2(0, 0)
cache/0/22/0/ascent = 0.0
cache/0/22/0/descent = 0.0
cache/0/22/0/underline_position = 0.0
cache/0/22/0/underline_thickness = 0.0
cache/0/22/0/scale = 1.0
cache/0/22/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/39/0 = Vector2(0, 0)
cache/0/39/0/ascent = 0.0
cache/0/39/0/descent = 0.0
cache/0/39/0/underline_position = 0.0
cache/0/39/0/underline_thickness = 0.0
cache/0/39/0/scale = 1.0
cache/0/39/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/39/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/39/0/kerning_overrides/39/0 = Vector2(0, 0)

[sub_resource type="Theme" id="14"]
Button/fonts/font = SubResource("13")
Label/colors/font_color = Color(1, 0, 0, 1)
Label/fonts/font = SubResource("13")

[sub_resource type="FontFile" id="12"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/39/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/22/0/ascent = 0.0
cache/0/22/0/descent = 0.0
cache/0/22/0/underline_position = 0.0
cache/0/22/0/underline_thickness = 0.0
cache/0/22/0/scale = 1.0
cache/0/22/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/39/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/39/0/ascent = 0.0
cache/0/39/0/descent = 0.0
cache/0/39/0/underline_position = 0.0
cache/0/39/0/underline_thickness = 0.0
cache/0/39/0/scale = 1.0
cache/0/39/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/39/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/39/0/kerning_overrides/39/0 = Vector2(0, 0)
cache/0/39/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/60/0/ascent = 0.0
cache/0/60/0/descent = 0.0
cache/0/60/0/underline_position = 0.0
cache/0/60/0/underline_thickness = 0.0
cache/0/60/0/scale = 1.0
cache/0/60/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/39/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/60/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="15"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/39/0 = Vector2(0, 0)
cache/0/22/0/ascent = 0.0
cache/0/22/0/descent = 0.0
cache/0/22/0/underline_position = 0.0
cache/0/22/0/underline_thickness = 0.0
cache/0/22/0/scale = 1.0
cache/0/22/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/39/0 = Vector2(0, 0)
cache/0/39/0/ascent = 0.0
cache/0/39/0/descent = 0.0
cache/0/39/0/underline_position = 0.0
cache/0/39/0/underline_thickness = 0.0
cache/0/39/0/scale = 1.0
cache/0/39/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/39/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/39/0/kerning_overrides/39/0 = Vector2(0, 0)

[node name="Overlay" type="CanvasLayer"]
script = ExtResource("3")

[node name="Debug" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="GenerateTileset" type="Button" parent="Debug"]
layout_mode = 0
offset_left = 64.0
offset_top = 96.0
offset_right = 182.0
offset_bottom = 116.0
text = "Generate Tileset"

[node name="ColorRect" type="ColorRect" parent="Debug"]
layout_mode = 0
offset_left = 1232.0
offset_top = 96.0
offset_right = 1536.0
offset_bottom = 208.0
color = Color(0.533333, 0.533333, 0.533333, 0.572549)

[node name="Label_Player" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 1320.0
offset_top = 104.0
offset_right = 1448.0
offset_bottom = 168.0
text = "Player Pos:
0, 0
"

[node name="Label_Left" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 1240.0
offset_top = 104.0
offset_right = 1320.0
offset_bottom = 168.0
text = "Tile Left:
Dirt
"

[node name="Label_Right" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 1448.0
offset_top = 104.0
offset_right = 1528.0
offset_bottom = 168.0
text = "Tile Right:
Mineral
"

[node name="Label_Bottom" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 1344.0
offset_top = 152.0
offset_right = 1423.0
offset_bottom = 200.0
text = "Tile Below:
Lava
"

[node name="ColorRect2" type="ColorRect" parent="Debug"]
layout_mode = 0
offset_left = 1320.0
offset_top = 256.0
offset_right = 1536.0
offset_bottom = 537.0
color = Color(0.533333, 0.533333, 0.533333, 0.572549)

[node name="Resources_Label" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 1328.0
offset_top = 264.0
offset_right = 1452.0
offset_bottom = 431.0
text = "Resources By Type:
Copper
Iron
Silver
Gold
Platinum
Uranium
Radinium
Laverdarnium
Jasminium"

[node name="Resources_Label2" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 1448.0
offset_top = 264.0
offset_right = 1528.0
offset_bottom = 312.0
text = "
0
"

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Coins" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 832.0
offset_top = 16.0
offset_right = 931.0
offset_bottom = 44.0
theme_override_fonts/font = SubResource("11")
text = "$10"

[node name="Health" type="ProgressBar" parent="HUD"]
layout_mode = 0
offset_left = 64.0
offset_top = 16.0
offset_right = 384.0
offset_bottom = 56.0
theme = SubResource("4")
value = 50.0

[node name="Label" type="Label" parent="HUD/Health"]
layout_mode = 0
offset_top = 40.0
offset_right = 40.0
offset_bottom = 54.0
theme_override_fonts/font = SubResource("6")
text = "Hull Health"

[node name="Fuel" type="ProgressBar" parent="HUD"]
layout_mode = 0
offset_left = 448.0
offset_top = 16.0
offset_right = 768.0
offset_bottom = 56.0
theme = SubResource("4")
value = 50.0

[node name="Label" type="Label" parent="HUD/Fuel"]
layout_mode = 0
offset_top = 40.0
offset_right = 40.0
offset_bottom = 68.0
theme_override_fonts/font = SubResource("6")
text = "Fuel"

[node name="Cargo" type="ProgressBar" parent="HUD"]
layout_mode = 0
offset_left = 1408.0
offset_top = 16.0
offset_right = 1536.0
offset_bottom = 56.0
theme = SubResource("4")
value = 50.0

[node name="Label" type="Label" parent="HUD/Cargo"]
layout_mode = 0
offset_left = 72.0
offset_top = 40.0
offset_right = 128.0
offset_bottom = 68.0
theme_override_fonts/font = SubResource("6")
text = "Cargo"

[node name="Store" type="ColorRect" parent="."]
visible = false
offset_left = 128.0
offset_top = 128.0
offset_right = 1472.0
offset_bottom = 768.0
color = Color(0.564706, 0.564706, 0.564706, 1)

[node name="Button2" type="Button" parent="Store"]
layout_mode = 0
offset_left = 1296.0
offset_top = 16.0
offset_right = 1328.0
offset_bottom = 48.0
size_flags_horizontal = 3
theme = SubResource("14")
theme_override_font_sizes/font_size = 39
text = "X"

[node name="Label" type="Label" parent="Store"]
layout_mode = 0
offset_left = 24.0
offset_top = 16.0
offset_right = 64.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = SubResource("12")
theme_override_font_sizes/font_size = 60
text = "STORE"

[node name="Cash_left" type="Label" parent="Store"]
layout_mode = 0
offset_left = 744.0
offset_top = 8.0
offset_right = 1272.0
offset_bottom = 82.0
theme_override_colors/font_color = Color(0.827451, 1, 0, 1)
theme_override_fonts/font = SubResource("12")
theme_override_font_sizes/font_size = 39
text = "$30"

[node name="Descriptors" type="Label" parent="Store"]
layout_mode = 0
offset_left = 32.0
offset_top = 400.0
offset_right = 552.0
offset_bottom = 605.0
size_flags_horizontal = 3
theme = SubResource("14")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("15")
theme_override_font_sizes/font_size = 39
text = "Cargo Size: 10
Max Fuel: 100
Max Hull: 100
Dynamite: 0"

[node name="VBoxContainer" type="VBoxContainer" parent="Store"]
layout_mode = 0
offset_left = 24.0
offset_top = 89.0
offset_right = 544.0
offset_bottom = 397.0

[node name="Label" type="Label" parent="Store/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("14")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("15")
theme_override_font_sizes/font_size = 39
text = "Supplies"

[node name="Cargo" type="HBoxContainer" parent="Store/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Store/VBoxContainer/Cargo"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("14")
theme_override_font_sizes/font_size = 39
text = "Sell Cargo"

[node name="Cost" type="Label" parent="Store/VBoxContainer/Cargo"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("14")
theme_override_colors/font_color = Color(0.0546875, 1, 0, 1)
theme_override_font_sizes/font_size = 39
text = "$5"

[node name="Fuel" type="HBoxContainer" parent="Store/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Store/VBoxContainer/Fuel"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("14")
theme_override_font_sizes/font_size = 39
text = "Buy Fuel"

[node name="Cost" type="Label" parent="Store/VBoxContainer/Fuel"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("14")
theme_override_font_sizes/font_size = 39
text = "$5"

[node name="Hull" type="HBoxContainer" parent="Store/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Store/VBoxContainer/Hull"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("14")
theme_override_font_sizes/font_size = 39
text = "Repair Hull"

[node name="Cost" type="Label" parent="Store/VBoxContainer/Hull"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("14")
theme_override_font_sizes/font_size = 39
text = "$5"

[node name="Dynamite" type="HBoxContainer" parent="Store/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Store/VBoxContainer/Dynamite"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("14")
theme_override_font_sizes/font_size = 39
text = "Buy Dynamite"

[node name="Cost" type="Label" parent="Store/VBoxContainer/Dynamite"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("14")
theme_override_font_sizes/font_size = 39
text = "$1000"

[node name="VBoxContainer2" type="VBoxContainer" parent="Store"]
layout_mode = 0
offset_left = 640.0
offset_top = 104.0
offset_right = 1160.0
offset_bottom = 616.0

[node name="Label" type="Label" parent="Store/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("14")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("15")
theme_override_font_sizes/font_size = 39
text = "Upgrades"

[node name="Fuel" type="HBoxContainer" parent="Store/VBoxContainer2"]
layout_mode = 2

[node name="Button" type="Button" parent="Store/VBoxContainer2/Fuel"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("14")
theme_override_font_sizes/font_size = 39
text = "Fuel Tank + 10 "

[node name="Cost" type="Label" parent="Store/VBoxContainer2/Fuel"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("14")
theme_override_font_sizes/font_size = 39
text = "$5"

[node name="Hull" type="HBoxContainer" parent="Store/VBoxContainer2"]
layout_mode = 2

[node name="Button" type="Button" parent="Store/VBoxContainer2/Hull"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("14")
theme_override_font_sizes/font_size = 39
text = "Max Hull +10"

[node name="Cost" type="Label" parent="Store/VBoxContainer2/Hull"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("14")
theme_override_font_sizes/font_size = 39
text = "$5"

[node name="Cargo" type="HBoxContainer" parent="Store/VBoxContainer2"]
layout_mode = 2

[node name="Button" type="Button" parent="Store/VBoxContainer2/Cargo"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("14")
theme_override_font_sizes/font_size = 39
text = "Cargo Bay + 1 Slot"

[node name="Cost" type="Label" parent="Store/VBoxContainer2/Cargo"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("14")
theme_override_font_sizes/font_size = 39
text = "$5"

[node name="ProgressBar" type="ProgressBar" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 128.0
offset_top = 384.0
offset_right = -128.0
offset_bottom = -452.0
show_percentage = false

[connection signal="pressed" from="Debug/GenerateTileset" to="." method="_on_GenerateTileset_pressed"]
[connection signal="pressed" from="Store/Button2" to="." method="_on_Store_Close_pressed"]
[connection signal="pressed" from="Store/VBoxContainer/Cargo/Button" to="." method="_on_SellCargo_pressed"]
[connection signal="pressed" from="Store/VBoxContainer/Fuel/Button" to="." method="_on_BuyFuel_pressed"]
[connection signal="pressed" from="Store/VBoxContainer/Hull/Button" to="." method="_on_RepairHull_pressed"]
[connection signal="pressed" from="Store/VBoxContainer/Dynamite/Button" to="." method="_on_BuyDynamite_pressed"]
[connection signal="pressed" from="Store/VBoxContainer2/Fuel/Button" to="." method="_on_UpgradeFuel_pressed"]
[connection signal="pressed" from="Store/VBoxContainer2/Hull/Button" to="." method="_on_UpgradeHull_pressed"]
[connection signal="pressed" from="Store/VBoxContainer2/Cargo/Button" to="." method="_on_UpgradeCargo_pressed"]
